# simdutil

./: CMakeLists.txt  readme.md
cmake/: ALL_BUILD.vcxproj.user.in
include/: emmintrin_ext.h  nmmintrin_ext.h  pmmintrin_emm.h  simdutil_base.h  smmintrin_emm.h  tmmintrin_emm.h  xmmintrin_ext.h
test/: CMakeLists.txt  emmintrin_ext_test.cpp  nmmintrin_ext_test.cpp  pmmintrin_emm_test.cpp  simdutil_test.cpp  smmintrin_emm_test.cpp  testutil.hpp  tmmintrin_emm_test.cpp  xmmintrin_ext_test.cpp
